# Badger-Engine

./: .classpath  .gitignore  .gitmodules  .project  Badger Engine.sln  Badger-core170716.vspx  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CNAME  LICENCE.md  LICENSE  LICENSE.md  Makefile  Performance1.psess  README.md  cmake_install.cmake  footer.html  graphics.css  header.html  index.html  utils.js
Badger-core/: Badger-core.vcxproj  Badger-core.vcxproj.filters  Resource.rc  main.cpp  tilelayer.cpp  tilelayer.h
Badger-core/examples/: game.cpp
Badger-core/ext/freetype-gl/: opengl.h  texture-atlas.c
Badger-core/ext/gorilla-audio/: ga.c  ga_internal.h
Badger-core/src/: badger.h  utils.h
Badger-core/src/audio/: sound.cpp  sound.h  sound_manager.cpp  sound_manager.h
Badger-core/src/engine/: Engine.cpp  Engine.h  camera.cpp  camera.h
Badger-core/src/graphics/: batchrenderer2d.cpp  batchrenderer2d.h  font.cpp  font.h  font_manager.cpp  font_manager.h  label.cpp  label.h  renderable2d.h  renderer2d.h  shader.cpp  shader.h  simple2drenderer.cpp  simple2drenderer.h  sprite.cpp  sprite.h  texture.cpp  texture.h  window.cpp  window.h
Badger-core/src/input/: input.cpp  input.h
Badger-core/src/maths/: mat4.cpp  mat4.h  maths.h  maths_func.h  (+6 more)
Dependencies/FreeType-Emscripten/: em_build_freetype.bat
badger/: Makefile
badger/src/: Badger.h  badgerpch.cpp  badgerpch.h
docs/: helloworld.txt  index.html
docs/gameloop/: index.html
docs/input/: index.html
docs/objects/: index.html
game/: Makefile
game/src/: SandboxApp.cpp
highlight.js/: highlight.pack.js
highlight.js/styles/: dracula.css
libogg/: libogg.vcxproj  libogg.vcxproj.filters
libvorbis/: libvorbis.vcxproj  libvorbis.vcxproj.filters
(+90 files in other folders)
